[project]
name = "simple-multi-turn-chatbot-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.1",
]
